<resources>
    <string name="app_name">CoEpi</string>
    <string name="privacy_link">https://www.coepi.org/privacy/</string>
    <string name="days">days</string>
    <string name="unknown">I don\'t know</string>
    <string name="submit">Submit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="link_privacy">https://www.coepi.org/privacy/</string>
    <string name="link_faq">https://www.coepi.org/faq/</string>
    <string name="unit_length_format_meters">%s meters</string>
    <string name="unit_length_format_feet">%s feet</string>
    <string name="tab_container_debug">Debug</string>
    <string name="tab_home">Home</string>
    <string name="tab_symptoms">Symptoms</string>
    <string name="tab_settings">Settings</string>
    <string name="tab_ble">BLE</string>
    <string name="tab_location">Location</string>
    <string name="label_fragment_home">Home</string>
    <string name="label_fragment_settings">Settings</string>
    <string name="label_fragment_ble">BLE</string>
    <string name="label_fragment_location">Location</string>
    <string name="label_fragment_onboarding">Onboarding</string>
    <string name="label_fragment_alerts">Alerts</string>
    <string name="label_fragment_alerts_details">Alerts details</string>
    <string name="label_fragment_alerts_info">How does CoEpi work?</string>
    <string name="label_fragment_symptoms">Symptom Report</string>
    <string name="label_fragment_api">API</string>
    <string name="symptoms_headline">What symptoms do you have today?</string>
    <string name="symptoms_caption">Select all that apply</string>
    <string name="symptoms_select_one">Select one option</string>
    <string name="symptoms_skip_button">Skip</string>
    <string name="symptoms_submit_button">@string/submit</string>
    <string name="symptoms_success_message">Symptoms submitted!</string>
    <string name="thanks_message">Thank you for logging your symptoms! We will alert if you have any relevant exposures to review.</string>
    <string name="thanks_log_button">Log more symptoms</string>
    <string name="thanks_exposures_button">View exposures</string>
    <string name="thanks_home_button">Return to home screen</string>
    <string name="onboarding_title">CoEpi</string>
    <string name="onboarding_cta">GET STARTED</string>
    <string name="onboarding_tagline">Collaborate. Inform. Protect.</string>
    <string name="onboarding_link">@string/privacy_link</string>
    <string name="onboarding_banner_1"><b>Log your</b> interactions</string>
    <string name="onboarding_banner_2"><b>Monitor</b> your health</string>
    <string name="onboarding_banner_3">Get <b>contextualized alerts</b> about possible exposure to infectious illness</string>
    <string name="home_my_health_card_title">Symptom Reporting</string>
    <string name="home_contact_alerts_card_title">Exposure Alerts</string>
    <string name="home_my_health_card_description">Share how you are feeling</string>
    <string name="home_contact_alerts_card_description">Review your potential exposures</string>
    <string name="home_version">Version: %s</string>
    <string name="home_privacy_link_text">How is my data being used?</string>
    <string name="home_how_does_it_work">How does CoEpi work?</string>
    <string name="onboarding_card_title_1">Log your interactions</string>
    <string name="onboarding_card_title_2">Monitor your health</string>
    <string name="onboarding_card_title_3">Stay informed</string>
    <string name="onboarding_card_title_4">Collaborate. Inform. Protect.</string>
    <string name="onboarding_card_content_1">CoEpi will anonymously log interactions
            with other devices using compatible apps.
    </string>
    <string name="onboarding_card_content_2">Share any symptoms you may have,
        <b>when you notice them.</b>
    </string>
    <string name="onboarding_card_content_3">You will get alerts about potential <b>
        exposure to individuals with contagious illnesses. </b>
    </string>
    <string name="onboarding_card_content_4">Help prevent the spread of contagious illnesses. <b>
        Together, we can make a difference.</b>
    </string>
    <string name="onboarding_data_usage_link_label"><u>How will my data be used?</u></string>
    <string name="onboarding_next_button_label">NEXT</string>
    <string name="onboarding_join_button_label">Get started</string>
    <string name="onboarding_faq_button_label">Frequently Asked Questions</string>
    <string name="bluetooth_info_title">CoEpi would like to use Location and Bluetooth</string>
    <string name="bluetooth_info_message">Activating Location and Bluetooth will enable CoEpi to detect interactions from nearby devices running compatible apps</string>
    <string name="bg_permission_info_title">Coepi needs background access</string>
    <string name="bg_permission_info_message">For contact tracing to be effective, the app needs to be active while you\'re not using it.</string>
    <string name="dont_allow">Don\'t Allow</string>
    <string name="alerts_button_acknowledge">Acknowledge</string>
    <plurals name="alerts_new_notifications_count">
        <item quantity="one">%s new exposure alert</item>
        <item quantity="other">%s new exposure alerts</item>
    </plurals>
    <string name="alerts_no_symptoms_reported">No symptoms reported</string>
    <string name="alerts_headline">Exposure Alerts</string>
    <string name="alerts_learn_more">Click each alert to learn more</string>
    <string name="alerts_info_title">How does CoEpi work?</string>
    <string name="alerts_info_back">Home</string>
    <string name="alerts_info_how_does_it_work_text">CoEpi generates exposure alerts if your
        device has detected another CoEpi user in close proximity and they have shared a relevant
        symptom report.\n\n
        Based on the symptom report in the exposure alert, you can:\n\n
         <b>&#8226; Monitor</b> yourself for symptoms in the days following the potential exposure.\n\n
         <b>&#8226; Self-isolate</b> within your household to reduce the risk of transmitting to others.\n\n
         <b>&#8226; Talk with a healthcare provider</b> about your exposure.</string>
    <string name="alerts_info_what_are_alerts_title">What is an exposure alert?</string>
    <string name="alerts_info_what_are_alerts_text"><b>Exposure alerts</b> indicate that you have been
        in close proximity (e.g. within several feet) to someone with symptoms also using a
        compatible app.</string>
    <string name="alerts_info_privacy_link">How is my data being used?</string>
    <string name="alerts_report_fever">Fever</string>
    <string name="alerts_report_cough">Cough</string>
    <string name="alerts_report_cough_wet">Wet cough</string>
    <string name="alerts_report_cough_dry">Dry cough</string>
    <string name="alerts_report_breathlessness">Shortness of breath</string>
    <string name="alerts_report_muscle_aches">Muscle aches</string>
    <string name="alerts_report_loss_smell_or_taste">Loss of smell or taste</string>
    <string name="alerts_report_diarrhea">Diarrhea</string>
    <string name="alerts_report_runny_nose">Runny nose</string>
    <string name="alerts_report_other">Other symptoms</string>
    <string name="alerts_report_no_symptoms">No symptoms reported</string>
    <string name="alerts_repeated_interaction">Repeated\ninteraction</string>
    <string name="alerts_details_title">Exposure alert</string>
    <string name="alerts_details_reported_on">Reported on %1$s at %2$s</string>
    <string name="alerts_details_duration_hours_minutes">%1$d hours and %2$d minutes exposure</string>
    <string name="alerts_details_duration_minutes">%d minutes exposure</string>
    <string name="alerts_details_duration_seconds">%d seconds exposure</string>
    <string name="alerts_details_distance_avg">Approx. %1$s %2$s away from you</string>
    <string name="alerts_details_distance_unit_feet">Feet</string>
    <string name="alerts_details_menu_delete">Delete</string>
    <string name="alerts_details_menu_report">Report a problem</string>
    <string name="alerts_details_report_email_subject">TODO</string>
    <string name="alerts_details_report_email_address">TODO@TODO.TODO</string>
    <string name="alerts_details_header_other_exposures">Other exposures with this person</string>
    <string name="infection_notification_title">Exposure</string>
    <string name="infection_notification_channel_name">Exposures</string>
    <string name="infection_notification_channel_description">Detected virus exposures</string>
    <string name="symptom_report_title_no_symptoms">I don\'t have any symptoms today</string>
    <string name="symptom_report_title_cough">Cough</string>
    <string name="symptom_report_title_breathless">Shortness of breath</string>
    <string name="symptom_report_title_fever">Fever</string>
    <string name="symptom_report_title_muscle_aches">Muscle aches</string>
    <string name="symptom_report_title_loss_smell">Loss of smell or taste</string>
    <string name="symptom_report_title_diarrhea">Diarrhea</string>
    <string name="symptom_report_title_runny_nose">Runny nose</string>
    <string name="symptom_report_title_other">Other</string>
    <string name="symptom_report_cough_title">Follow up: Cough</string>
    <string name="symptom_report_cough_type_headline">I would describe my cough as:</string>
    <string name="symptom_report_cough_type_wet">Wet</string>
    <string name="symptom_report_cough_type_dry">Dry</string>
    <string name="symptom_report_cough_type_wet_description">It feels like there is mucus in my throat and\/or chest</string>
    <string name="symptom_report_cough_type_dry_description">My throat feels \'tickly\' or \'scratchy\' without mucus</string>
    <string name="symptom_report_cough_duration_headline">How many days have you been coughing?</string>
    <string name="symptom_report_cough_duration_days">@string/days</string>
    <string name="symptom_report_cough_duration_unknown">@string/unknown</string>
    <string name="symptom_report_cough_status_headline">Today my cough has:</string>
    <string name="symptom_report_cough_status_option_better_worse_day">Felt worse and better throughout the day</string>
    <string name="symptom_report_cough_status_option_worse_outside">Felt worse when I am outside</string>
    <string name="symptom_report_cough_status_option_same_or_steadily_worse">Stayed the same or felt steadily worse</string>
    <string name="symptom_report_breathlessness_cause_title">Follow up: Shortness of breath</string>
    <string name="symptom_report_breathlessness_cause_headline">I feel short of breath when:</string>
    <string name="symptom_report_fever_title">Follow up: Fever</string>
    <string name="symptom_report_fever_taken_today_headline">Have you taken your temperature today?</string>
    <string name="symptom_report_fever_taken_today_yes">@string/yes</string>
    <string name="symptom_report_fever_taken_today_no">@string/no</string>
    <string name="symptom_report_fever_temperature_spot_headline">Where did you take your temperature most recently?</string>
    <string name="symptom_report_fever_temperature_spot_mouth">Mouth</string>
    <string name="symptom_report_fever_temperature_spot_ear">Ear</string>
    <string name="symptom_report_fever_temperature_spot_armpit">Armpit</string>
    <string name="symptom_report_fever_temperature_spot_other">Other</string>
    <string name="symptom_report_earliest_symptom_title">Follow up: Earliest Symptoms</string>
    <string name="symptom_report_earliest_symptom_headline">How many days ago did the symptoms begin?</string>
    <string name="symptom_report_earliest_symptom_days">@string/days</string>
    <string name="symptom_report_earliest_symptom_unknown">@string/unknown</string>
    <string name="accessibility_back_button">Back Button</string>
</resources>