<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/tab_home"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/care_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/tab_symptoms"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/location_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/tab_location"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/ble_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/tab_ble"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/settings_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/tab_settings"
        app:showAsAction="ifRoom" />
</menu>
