<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="org.coepi.android.ui.symptoms.cough.CoughTypeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_geometric_light_background">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationContentDescription="@string/accessibility_back_button"
            app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
            app:title="@string/symptom_report_cough_title"
            app:titleTextColor="@android:color/white" />

        <TextView
            android:id="@+id/headline"
            android:name="androidx.navigation.fragment.NavHostFragment"
            style="@style/headline"
            android:layout_width="0dp"
            android:text="@string/symptom_report_cough_type_headline"
            android:textSize="@dimen/text_size_headline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <LinearLayout
            android:id="@+id/options"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="82dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headline">

            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/circle_button"
                android:layout_marginEnd="@dimen/circle_button_spacing"
                android:onClick="@{() -> vm.onClickWet()}">

                <TextView
                    android:id="@+id/wet_headline"
                    style="@style/circle_button_title_with_descr"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/symptom_report_cough_type_wet"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/circle_button_descr"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/symptom_report_cough_type_wet_description"
                    android:textFontWeight="@integer/text_weight_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/wet_headline" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/circle_button"
                android:onClick="@{() -> vm.onClickDry()}">

                <TextView
                    android:id="@+id/dry_headline"
                    style="@style/circle_button_title_with_descr"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/symptom_report_cough_type_dry"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/circle_button_descr"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/symptom_report_cough_type_dry_description"
                    android:textFontWeight="@integer/text_weight_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/dry_headline" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <TextView
            style="@style/skip_button"
            android:onClick="@{() -> vm.onClickSkip()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <include
            isVisible="@{vm.isInProgress}"
            layout="@layout/progress_bar_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>