<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="org.coepi.android.ui.symptoms.earliestsymptom.EarliestSymptomViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_geometric_light_background">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationContentDescription="@string/accessibility_back_button"
            app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
            app:title="@string/symptom_report_earliest_symptom_title"
            app:titleTextColor="@android:color/white"></androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/headline"
            android:name="androidx.navigation.fragment.NavHostFragment"
            style="@style/headline"
            android:layout_width="0dp"
            android:text="@string/symptom_report_earliest_symptom_headline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <EditText
            android:id="@+id/earliest_symptom"
            android:layout_width="167dp"
            android:layout_height="71dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="27dp"
            android:background="@drawable/background_edittext"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="2"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textFontWeight="@integer/text_weight_light"
            android:textSize="@dimen/text_size_70"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headline"
            tools:text="123" />

        <TextView
            android:id="@+id/days"
            android:layout_width="148dp"
            android:layout_height="78dp"
            android:layout_marginStart="23dp"
            android:gravity="center_vertical"
            android:labelFor="@id/earliest_symptom"
            android:text="@string/symptom_report_earliest_symptom_days"
            android:textFontWeight="@integer/text_weight_light"
            android:textSize="@dimen/text_size_50"
            app:layout_constraintStart_toEndOf="@id/earliest_symptom"
            app:layout_constraintTop_toTopOf="@id/earliest_symptom" />

        <Button
            android:id="@+id/unknown"
            style="@style/small_button_unselected"
            android:layout_width="131dp"
            android:layout_marginTop="24dp"
            android:onClick="@{() -> vm.onClickUnknown()}"
            android:text="@string/symptom_report_earliest_symptom_unknown"
            app:layout_constraintStart_toStartOf="@id/earliest_symptom"
            app:layout_constraintTop_toBottomOf="@id/earliest_symptom" />

        <Button
            android:id="@+id/submit"
            style="@style/small_button_selected"
            android:layout_width="wrap_content"
            android:onClick="@{() -> vm.onClickSubmit()}"
            android:text="@string/symptoms_submit_button"
            app:layout_constraintStart_toStartOf="@id/days"
            app:layout_constraintTop_toTopOf="@id/unknown" />

        <TextView
            style="@style/skip_button"
            android:onClick="@{() -> vm.onClickSkip()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <include
            isVisible="@{vm.isInProgress}"
            layout="@layout/progress_bar_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>