<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="org.coepi.android.ui.symptoms.fever.FeverTakenTodayViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_geometric_light_background">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationContentDescription="@string/accessibility_back_button"
            app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
            app:title="@string/symptom_report_fever_title"
            app:titleTextColor="@android:color/white" />

        <TextView
            android:id="@+id/headline"
            style="@style/headline"
            android:layout_width="0dp"
            android:text="@string/symptom_report_fever_taken_today_headline"
            android:textSize="@dimen/text_size_headline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <LinearLayout
            android:id="@+id/options"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="82dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headline">

            <FrameLayout
                style="@style/circle_button"
                android:layout_marginEnd="@dimen/circle_button_spacing"
                android:onClick="@{() -> vm.onClickYes()}">

                <TextView
                    style="@style/circle_button_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/symptom_report_fever_taken_today_yes" />

            </FrameLayout>

            <FrameLayout
                style="@style/circle_button"
                android:layout_marginEnd="@dimen/circle_button_spacing"
                android:onClick="@{() -> vm.onClickNo()}">

                <TextView
                    android:id="@+id/wet_headline"
                    style="@style/circle_button_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/symptom_report_fever_taken_today_no" />

            </FrameLayout>

        </LinearLayout>

        <TextView
            style="@style/skip_button"
            android:onClick="@{() -> vm.onClickSkip()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <include
            isVisible="@{vm.isInProgress}"
            layout="@layout/progress_bar_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>