<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="org.coepi.android.ui.symptoms.fever.FeverTemperatureSpotViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_geometric_light_background">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationContentDescription="@string/accessibility_back_button"
            app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
            app:title="@string/symptom_report_fever_title"
            app:titleTextColor="@android:color/white" />

        <TextView
            android:id="@+id/headline"
            android:name="androidx.navigation.fragment.NavHostFragment"
            style="@style/headline"
            android:layout_width="0dp"
            android:text="@string/symptom_report_fever_temperature_spot_headline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <!-- TODO use recyclerview grid, this is obviously not a good way to implement this -->
        <LinearLayout
            android:id="@+id/row1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headline">

            <FrameLayout
                android:id="@+id/mouth"
                style="@style/circle_button"
                android:layout_marginEnd="@dimen/circle_button_spacing"
                android:onClick="@{() -> vm.onClickMouth()}">

                <TextView
                    style="@style/circle_button_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/symptom_report_fever_temperature_spot_mouth" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/ear"
                style="@style/circle_button"
                android:onClick="@{() -> vm.onClickEar()}">

                <TextView
                    style="@style/circle_button_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/symptom_report_fever_temperature_spot_ear" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/row1">

            <FrameLayout
                android:id="@+id/armpit"
                style="@style/circle_button"
                android:layout_marginRight="20dp"
                android:onClick="@{() -> vm.onClickArmpit()}"
                app:layout_constraintEnd_toStartOf="@id/other"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mouth">

                <TextView
                    style="@style/circle_button_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/symptom_report_fever_temperature_spot_armpit" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/other"
                style="@style/circle_button"
                android:onClick="@{() -> vm.onClickOther()}"
                app:layout_constraintStart_toStartOf="@id/ear"
                app:layout_constraintTop_toTopOf="@id/armpit">

                <TextView
                    style="@style/circle_button_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/symptom_report_fever_temperature_spot_other" />
            </FrameLayout>
        </LinearLayout>

        <TextView
            style="@style/skip_button"
            android:onClick="@{() -> vm.onClickSkip()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <include
            isVisible="@{vm.isInProgress}"
            layout="@layout/progress_bar_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>