<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="org.coepi.android.ui.symptoms.cough.CoughStatusViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/LightFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationContentDescription="@string/accessibility_back_button"
            app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
            app:title="@string/symptom_report_cough_title"
            app:titleTextColor="@android:color/white" />


        <TextView
            android:id="@+id/headline"
            android:name="androidx.navigation.fragment.NavHostFragment"
            style="@style/headline"
            android:layout_width="0dp"
            android:text="@string/symptom_report_cough_status_headline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/status_recycler_view"
            android:layout_width="0dp"
            android:layout_height="263dp"
            android:layout_marginStart="33dp"
            android:layout_marginTop="42dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toTopOf="@id/skip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headline" />

        <TextView
            style="@style/skip_button"
            android:onClick="@{() -> vm.onClickSkip()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <include
            isVisible="@{vm.isInProgress}"
            layout="@layout/progress_bar_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>